# torch-oocairo

./: .gitignore  CMakeLists.txt  COPYRIGHT  Changes  MANIFEST  Makefile  README  README.md  TODO  init.lua  lunit.lua  obj_context.c  obj_font_face.c  obj_pattern.c  obj_scaled_font.c  obj_surface.c  oocairo-1-2.rockspec  oocairo.c  oocairo.h  runlocal.lua  test-setup.lua
debian/: .gitignore  Makefile.Debian.conf  changelog  control  liblua5.1-oocairo-dev.manpages
doc/: .gitignore  lua-oocairo-context.pod  lua-oocairo-fontface.pod  lua-oocairo-fontopt.pod  lua-oocairo-matrix.pod  lua-oocairo-path.pod  lua-oocairo-pattern.pod  lua-oocairo-scaledfont.pod  lua-oocairo-surface.pod  lua-oocairo.pod
doc/md/: lua-oocairo-context.md  lua-oocairo-fontface.md  lua-oocairo-fontopt.md  lua-oocairo-matrix.md  lua-oocairo-path.md  lua-oocairo-pattern.md  lua-oocairo-scaledfont.md  lua-oocairo-surface.md  lua-oocairo.md  (+1 more)
examples/: .gitignore  arc.lua  compositing.lua  create-from-data.lua  fill-rule.lua  get-data.lua  groups.lua  gtk-drawing.lua  gtk-image.glade  gtk-image.lua  inside-tests.lua  loading-images.lua  masking.lua  repeated-patterns.lua  sdl-simple-example.lua  sdl-window.lua  simple-example-torch.lua  simple-example.c  simple-example.lua  stroke-style.lua  text-extents.lua  text-font.lua  text-path.lua  text-userfont.lua  text-userfont2.lua  tolerance.lua  transform.lua
test/: context.lua  font_face.lua  font_opt.lua  general.lua  matrix.lua  path.lua  pattern.lua  pdf_surface.lua  ps_surface.lua  scaled_font.lua  surface.lua  svg_surface.lua  tensor2rgb24.lua
(+1 files in other folders)
