CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(LUA_OOCAIRO_VERSION 1.2)
FIND_PACKAGE(Torch REQUIRED)

FIND_PATH(CAIRO_INCLUDE_DIR cairo.h PATH_SUFFIXES cairo)
FIND_LIBRARY(CAIRO_LIBRARY NAMES cairo)

IF(CAIRO_INCLUDE_DIR-NOTFOUND OR CAIRO_LIBRARY-NOTFOUND)
	MESSAGE(ERROR "Could not find cairo library")
ENDIF()

SET(src oocairo.c)
SET(luasrc init.lua)

INCLUDE_DIRECTORIES(${CAIRO_INCLUDE_DIR})
ADD_DEFINITIONS(-DVERSION="${LUA_OOCAIRO_VERSION}")
ADD_TORCH_PACKAGE(oocairo "${src}" "${luasrc}" "Cairo bindings for torch")
TARGET_LINK_LIBRARIES(oocairo ${CAIRO_LIBRARY} luaT)
